# claude-plugins

./: .gitignore  CLAUDE.md  MIGRATION.md  QUICKSTART-OPTIMIZATION.md  QUICK_START.md  README.md  TEMPLATE-OPTIMIZATION-TRACKER.md  VERIFICATION.md  build_package.py  pyproject.toml  test_build.py
.claude/: README.md  wiki-config.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/commands/: save-session.md  wiki-generate.md
.claude-plugin/scripts/: migrate-sessions.sh
.claude-plugin/templates/: api.md.template
.claude/templates/: development.md.template  index.md.template  module.md.template  overview.md.template  wiki-config.json.template
.specify/memory/: constitution.md
commands/: commit.md  save-session.md
docs/plans/: 001-plugin-system-migration.md
plugins/commands/: commit.md  save-session.md  wiki-generate.md
plugins/libs/: config_resolver.sh  metadata_tracker.sh
plugins/schemas/: wiki-config-schema-v3.json
plugins/scripts/: add_region_markers.sh  migrate-sessions.sh
specs/: README.md
specs/001-command-install/: DOCS_TREE.txt
specs/001-fix-package-structure/: README.md  data-model.md  plan.md  research.md
specs/001-wiki-generator-commands/: README.md  data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-command-install/: DIRECTORY-RESTRUCTURE-REPORT.md  DOCS_TREE.txt  EXECUTIVE_SUMMARY.md  IMPLEMENTATION-REPORT.md  MVP-COMPLETE.md  PHASE1-IMPLEMENTATION-REPORT.md  PHASE2-IMPLEMENTATION-REPORT.md  PLAN-UPDATE-v1.1.0.md  PROGRESS.md  README.md  TASKS-GENERATION-REPORT.md  data-model.md  decision-tree.md  file-conflict-strategy-research.md  plan.md  quickstart.md  research.md  source-parsing-research.md  spec.md  tasks.md
specs/003-fix-package-structure/: IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  plan.md  quickstart.md  spec.md
specs/004-optimize-wiki-docs/: data-model-v2.md  data-model.md  plan.md  quickstart-v2.md  quickstart.md  research-v2.md  research.md  spec.md  tasks-v2.md  tasks.md
specs/005-auto-doc-outline/: IMPLEMENTATION_PROGRESS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-wiki-cli-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __main__.py  cli.py
src/core/: config_manager.py  shower.py
src/models/: config.py
src/utils/: __init__.py  error_handler.py  errors.py  file_helper.py  git_helper.py  validator.py
tests/: CHANGE_DETECTION_TEST_PLAN.md  README.md  test_change_detection.sh  test_config_resolver.sh  test_helpers.sh  test_incremental_updates.sh  test_smart_merge.sh
wiki_generator/: __init__.py  __main__.py  cli.py  cli_v2.py  config.py  installer.py
(+146 files in other folders)
