[project]
name = "wiki-generator"
version = "1.0.0"
description = "Wiki Generator 安装工具 - 安装 wiki-generate 命令和模板到 Claude Code 项目"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Repo Wiki Generator Team" }
]
keywords = ["claude-code", "cli", "wiki", "generator", "installer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
wiki-generator = "wiki_generator.cli:cli"

[project.urls]
Homepage = "https://github.com/user/repo-wiki"
Documentation = "https://github.com/user/repo-wiki/blob/main/README-WIKI-GENERATOR.md"
Repository = "https://github.com/user/repo-wiki"
Issues = "https://github.com/user/repo-wiki/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki_generator"]
include = [
    "wiki_generator/**/*.py",
    ".claude/commands/wiki-generate.md",
    ".claude/templates/**",
    ".claude/*.json",
    ".claude/*.md",
]

[tool.ruff]
# 行长度
line-length = 100

# 目标 Python 版本
target-version = "py38"

# 扫描的源目录
src = ["wiki_generator"]

# 启用的规则集
[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff specific rules
]

# 忽略的规则
ignore = [
    "E501",  # 行过长（由 formatter 处理）
]

# 排除的文件
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
# 测试文件可以更宽松
"tests/**/*.py" = [
    "S101",   # 允许使用 assert
]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进风格
indent-style = "space"

# 保留魔术尾随逗号
skip-magic-trailing-comma = false

# 行结束符
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
